# caddy_sensor_kit_launch

./: NOTICE  README.md
caddy_sensor_kit_description/: CMakeLists.txt  package.xml
caddy_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
caddy_sensor_kit_description/meshes/: swift_nav.stl
caddy_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
caddy_sensor_kit_launch/: CMakeLists.txt  package.xml
caddy_sensor_kit_launch/config/camera/: blackfly_s.param.yaml
caddy_sensor_kit_launch/config/lidar/: lidar_front.param.yaml  lidar_rear.param.yaml
caddy_sensor_kit_launch/config/rviz/: display.rviz
caddy_sensor_kit_launch/launch/: camera.launch.py  imu.launch.py  lidar.launch.py  sensing.launch.py
