<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caddy_sensor_kit_launch</name>
  <version>0.1.0</version>
  <description>The caddy_sensor_kit_launch package</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>caddy_sensor_kit_description</exec_depend>
  <exec_depend>bluespace_ai_xsens_mti_driver</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>flir_spinnaker_ros2</exec_depend>
  <exec_depend>ros2_ouster</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>gnss_poser</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
